# Scaler-Final

./: .dockerignore  .gitignore  BLOG_SUBMISSION.md  Dockerfile  README.md  Training Run.ipynb  app.py  openenv.yaml  pyproject.toml  requirements-colab.txt  requirements-server.txt  requirements.txt
app/: gradio_app.py  server.py
env/: reward_engine.py  state_generator.py  zombieshield_env.py
notebooks/: colab_train.ipynb
server/: app.py
simulator/: api_simulator.py
training/: evaluate_tasks.py  run_baseline.py  test_env.py  train_grpo_rlvr.py  train_trl.py
training_outputs/: baseline_results.json  policy_checkpoint.json  training_summary.json
