[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zombieshield-env"
version = "0.1.0"
description = "OpenEnv-compatible environment for zombie API discovery and mitigation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openenv-core==0.2.3",
  "torch",
  "transformers",
  "trl>=0.7.10,<0.9.0",
  "gradio",
  "matplotlib",
  "pyyaml",
]

[project.scripts]
server = "server.app:main"
